# tree-sitter-huff

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_huff/: __init__.py
bindings/rust/: lib.rs
examples/: builtins.huff  comments.huff  directives.huff  literals.huff  opcodes.huff
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: builtins.txt  comments.txt  directives.txt  literals.txt  opcodes.txt
